<resources>
    <string name="app_name">Sms Transfer</string>
    <string name="action_settings">Settings</string>
    <string name="login_screen_name">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="fragment_title_home">Home</string>
    <string name="fragment_title_add">create</string>
    <string name="fragment_title_notifications">Notifications</string>
    <string name="fragment_title_profile">Profile</string>
    <string name="user_profile_title">Profile Management</string>
    <string name="user_profile_email">Email</string>
    <string name="user_profile_username">Username</string>
    <string name="user_profile_notifications">Notifications</string>
    <string name="user_profile_applets">Service State</string>
    <string name="user_profile_sign_out">Sign out</string>
    <string name="user_profile_delete_account">delete account</string>
    <string name="phone_number_title">phone number</string>
    <string name="content_of_the_sms">Filter on Content</string>
    <string name="by_sender_title">Filter on Sender</string>
    <string name="sms_content_hint">sms content</string>
    <string name="applet_name_hint">Applet name</string>
    <string name="phone_number_filter_description">Phone number of the sender, every time an sms received with phone number , the filter will be triggered</string>
    <string name="sms_content_description">Each time an sms received contains the text entered below the filter will be triggered</string>
    <string name="post_to_slack_description"> This step is required to select your preferable Slack channel to post you automatic message, you can also personalize the content of this message. </string>
    <string name="post_to_device_description"> This step is required to select your preferable phone contact to post you automatic message, you can also personalize the content of this message. </string>
    <string name="post_to_email_description"> This step is required to select your preferable Email contact to post you automatic message, you can also personalize the content of this message. </string>
    <string name="selected_channel">You selected the channel : <b><i> %1$s </i></b> all dedicated filter will send messages on this slack channel  </string>
    <string name="profile_service_description">Allow the application to post incoming tagged SMS Message to your selected channels</string>
    <string name="card_description">Depending on the rules, Applet will post messages on this channel : %1$s</string>
    <string name="card_rules">Rules added : %1$s</string>
    <string name="need_permission">The service need this permission in order to allow your application to access SMS Received to post your desired messages.</string>
    <string name="description_access_slack">Click on the button bellow to pair your app with your slack profile, a Web Browser will be opened select your preferred slack group and authorize the app access</string>
    <string name="sms_permission">Permission to access SMS</string>
    <string name="terms_and_conditions_login"> <u>Privacy policy</u>.</string>
    <string name="permission_dialog">The application need : %1$s permission to guarantee that the application will be functional in fact the feature is %2$s </string>
    <string name="permission_dialog_receive_sms">RECEIVE_SMS</string>
    <string name="permission_dialog_send_sms">SEND_SMS</string>
    <string name="permission_dialog_read_contact">READ_CONTACT</string>
    <string name="permission_dialog_receive_sms_content"> redirect your Received SMS to your selected destination </string>
    <string name="permission_dialog_send_sms_content"> Sending SMS to your added device or contact </string>
    <string name="permission_dialog_read_contact_content"> reading contact on your device to select your desired contact</string>
    <string name="applet_type_email_description">Create your Email applet , this will transfer your received SMS that match to the desired email</string>
    <string name="applet_type_device_description">Have another phone and you want to receive some tagged SMS also, you have only to create your filter</string>
    <string name="applet_type_slack_description">Redirect your Received SMS to slack; in order to accomplish the process, you need more steps, pair the app with your slack group</string>
    <string name="applet_type_email_details">
        Create your Email applet , this will transfer your received SMS that match to the desired email</string>
    <string name="applet_type_device_details">Have another phone and you want to receive some tagged SMS also, you have only to create your filter</string>
    <string name="applet_type_slack_details">Redirect your Received SMS to slack; in order to accomplish the process, you need more steps, pair the app with your slack group</string>
</resources>