<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.sms.pipe.view.home.HomeFragment"
        android:label="@string/fragment_title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.sms.pipe.view.notifications.NotificationsFragment"
        android:label="@string/fragment_title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.sms.pipe.view.profile.ProfileFragment"
        android:label="@string/fragment_title_profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/chooseSlackFragment"
        android:name="com.sms.pipe.view.addApplet.CreateSlackFragment"
        android:label="ChooseSlackFragment"
        tools:layout="@layout/fragment_create_slack"/>
    <fragment
        android:id="@+id/createFilterFragment"
        android:name="com.sms.pipe.view.addApplet.CreateFilterFragment"
        android:label="CreateFilterFragment"
        tools:layout="@layout/fragment_create_filter"/>


</navigation>