<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottomSheetBiometric"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/screen_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:text="Create applet 1/2"
        android:textAppearance="?attr/textAppearanceHeadline6"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/applet_name_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="26dp"
        android:focusableInTouchMode="true"
        android:hint="@string/applet_name_hint"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/screen_title"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/applet_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawablePadding="10dp"
            android:imeOptions="actionDone"
            android:inputType="textShortMessage" />
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:id="@+id/choose_filter_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginVertical="18dp"
        android:text="Choose the filter on which the received SMS will be filtered by"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/applet_name_layout" />

    <com.google.android.material.chip.ChipGroup

        android:id="@+id/chip_group_filter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="12dp"
        app:chipSpacingHorizontal="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/choose_filter_description"
        app:singleSelection="false">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_number_filter"
            style="@style/MyApp.chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/by_sender_title"
            app:chipIcon="@drawable/ic_phone"
            app:chipIconVisible="true" />


        <com.google.android.material.chip.Chip
            android:id="@+id/chip_sms_content_filter"
            style="@style/MyApp.chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/content_of_the_sms"
            app:chipIcon="@drawable/ic_sms"
            app:chipIconVisible="true" />

    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/tv_phone_number_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="20dp"
        android:text="@string/phone_number_filter_description"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chip_group_filter"
        tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sender_number_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp"
        android:animateLayoutChanges="true"
        android:focusableInTouchMode="true"
        android:hint="@string/phone_number_title"
        android:inputType="number"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_phone_number_description"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sender_phone_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_phone"
            android:drawablePadding="10dp"
            android:imeOptions="actionDone"
            android:inputType="textShortMessage" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_sms_content_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="28dp"
        android:text="@string/sms_content_description"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sender_number_input"
        tools:visibility="visible" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/sms_content_input"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="8dp"
        android:focusableInTouchMode="true"
        android:hint="@string/sms_content_hint"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sms_content_description"
        tools:visibility="visible">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sender_sms_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/ic_sms"
            android:drawablePadding="10dp"
            android:imeOptions="actionDone"
            android:inputType="textLongMessage" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/validate_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="60dp"
        android:layout_marginBottom="25dp"
        android:background="@drawable/rounded_corner"
        android:enabled="false"
        android:text="Continue"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
